--- a/style.css
+++ b/style.css
@@ -307,6 +307,11 @@ h1::after {
     box-sizing: border-box;
     flex-grow: 0;
     align-self: center;
+    /* Add these properties to ensure stability */
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    will-change: transform;
 }
 
 .grid-cell {
@@ -317,6 +322,11 @@ h1::after {
     width: 100%;
     height: 100%;
     box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.05);
+    /* Add these properties to ensure grid cells don't move */
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    will-change: transform;
 }
 
 /* Improve tile styles to be more consistent across devices */
